# django-opensearch-models

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
django_opensearch_models/: apps.py  documents.py  fields.py  registries.py  signals.py
django_opensearch_models/management/commands/: search_index.py
django_opensearch_models/test/: testcases.py
docs/source/: about.rst  conf.py  develop.rst  es_index.rst  fields.rst  index.rst  management.rst  quickstart.rst  settings.rst
example/: README.rst
example/example/: settings.py  urls.py
example/test_app/: admin.py  documents.py  models.py
example/test_app/migrations/: 0001_initial.py  0002_alter_ad_car_alter_ad_id_alter_car_id_and_more.py
src/django_opensearch_models/: __init__.py  apps.py  exceptions.py  indices.py  search.py  signals.py
src/django_opensearch_models/management/commands/: search_index.py
src/django_opensearch_models/test/: __init__.py
tests/: __init__.py  documents.py  fixtures.py  models.py  test_commands.py  test_documents.py  test_fields.py  test_indices.py  test_integration.py  test_registries.py  test_signals.py
